--- a/index.html
+++ b/index.html
@@ -4,19 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>JevoMeet Logo Preview</title>
-    <link rel="icon" href="J(1).png">
+
+    <link rel="icon" href="J(1).png" type="image/png">
+
     <link rel="apple-touch-icon" href="J(1).png">
+    <link rel="apple-touch-icon" sizes="180x180" href="J(1).png">
+    <link rel="apple-touch-icon" sizes="192x192" href="J(1).png">
+
     <meta name="apple-mobile-web-app-title" content="JevoMeet">
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black">
-    <style>
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent"> <meta name="theme-color" content="#FFC0CB"> <style>
         body {
             display: flex;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
             margin: 0;
-            background-color: #f0f0f0; /* Warna latar belakang */
+            background-color: #f0f0f0;
         }
         img {
             max-width: 80%;
